--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,29 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="inicio" href="/tabs/inicio">
       <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="mi-cuenta" href="/tabs/mi-cuenta">
       <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-label>Mi cuenta</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="empleos" href="/tabs/empleos">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>Empleos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="favoritos" href="/tabs/favoritos">
+      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-label>Favoritos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="ajustes" href="/tabs/ajustes">
+      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-label>Ajustes</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
