--- a/src/app/ajustes/ajustes.page.html
+++ b/src/app/ajustes/ajustes.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>ajustes</ion-title>
+    <ion-title>Ajustes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">ajustes</ion-title>
+      <ion-title size="large">Ajustes</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
