--- a/src/app/empleos/empleos.page.html
+++ b/src/app/empleos/empleos.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>empleos</ion-title>
+    <ion-title>Empleos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">empleos</ion-title>
+      <ion-title size="large">Empleos</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
