--- a/src/app/mi-cuenta/mi-cuenta.page.html
+++ b/src/app/mi-cuenta/mi-cuenta.page.html
@@ -1,3 +1,4 @@
+<!-- src/app/mi-cuenta/mi-cuenta.page.html -->
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Mi Cuenta</ion-title>
@@ -10,4 +11,39 @@
       <ion-title size="large">Mi Cuenta</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Información Personal -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Información Personal</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="stacked">Nombre</ion-label>
+        <ion-input placeholder="Manuel Escalera"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Email</ion-label>
+        <ion-input type="email" placeholder="prueba@gmail.com"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Teléfono</ion-label>
+        <ion-input type="tel" placeholder="+56912345678"></ion-input>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Opciones de Seguridad</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item button (click)="changePassword()">
+        <ion-label>Cambiar Contraseña</ion-label>
+      </ion-item>
+      <ion-item button (click)="logout()">
+        <ion-label>Cerrar Sesión</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
