--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,27 +2,27 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio" href="/tabs/inicio">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="home-outline"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="mi-cuenta" href="/tabs/mi-cuenta">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>Mi cuenta</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="empleos" href="/tabs/empleos">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="briefcase-outline"></ion-icon>
       <ion-label>Empleos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="favoritos" href="/tabs/favoritos">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="star-outline"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="ajustes" href="/tabs/ajustes">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Ajustes</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
